fixed review tab error with dropdownlist

--- a/BoxOfCourses/BoxOfCourses/Content/Site.css
+++ b/BoxOfCourses/BoxOfCourses/Content/Site.css
@@ -193,6 +193,11 @@ textarea {
 }
 
 
+/*body tuka pocnuva za slikata hover - contact*/
+
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
+
 
 
 /*tuka */
