--- a/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Courses/Index.cshtml
@@ -17,42 +17,6 @@
             </ol>
 
             <div class="carousel-inner" role="listbox">
-                @*<div class="item active">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/carousel-1.png">
-                    </div>
-
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/carousel-second.png">
-                        <div class="carousel-caption">
-                            <h4 class="h4-black">Want to learn more?</h4>
-                            <p class="p-green">You're on the right path!</p>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/carousel-third.png">
-                    </div>*@
-
-
-                @*<div class="item active">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/image 2.jpg">
-                    </div>
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/image 3.jpg">
-                    </div>
-
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/image 4.jpg">
-                    </div>
-
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/image 5.jpg">
-                    </div>
-
-                    <div class="item">
-                        <img class="carousel-img img-responsive" src="~/Content/photos/image 6.jpg">
-                    </div>*@
-
                 <div class="item active">
                     <img class="carousel-img img-responsive" src="~/Content/carousel-images/img-3.jpg">
                 </div>
@@ -65,15 +29,12 @@
                 <div class="item">
                     <img class="carousel-img img-responsive" src="~/Content/carousel-images/img-5.jpg">
                 </div>
-
                 <div class="item">
                     <img class="carousel-img img-responsive" src="~/Content/carousel-images/img-7.jpg">
                 </div>
                 <div class="item">
                     <img class="carousel-img img-responsive" src="~/Content/carousel-images/img-8.jpg">
                 </div>
-
-
             </div>
 
             <!-- Controls -->
@@ -140,16 +101,12 @@
                     <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-info editcourseButton" }) <span class="vertical-line-between">|</span>
                         @Html.ActionLink("Take course", "Details", new { id = item.Id, @class = "takeCourse" }, new { @class = "btn btn-success takecourseButton" }) <span class="vertical-line-between">|</span>
-                        @* @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger deletecourseButton" })*@
                         <button data-course-name="@item.Name" data-course-id="@item.Id" class="btn btn-danger js-delete">Delete</button>
                     </td>
-                    @*<img src="~/Content/photos/delete.jpg" style="width:50px; height:50px;">*@
                 </tr>
             }
         </tbody>
     </table>
-
-
 </div>
 
 <div class="container-fluid">
@@ -178,16 +135,12 @@
         background-color: #444;
     }
 
-    /* Only for beautify example */
-
-
     .carousel-inner{
-        height: 400px;
+        height: 500px;
     }
     .carousel-img {
         width: 100%;
-        height: 100%;
-        max-height: 300px;
+        height: 100%!important;     
     }
 
     .cont-fluid {
@@ -389,6 +342,10 @@
     .icon-github:hover {
         color: black;
     }
+
+    .js-delete{
+        color: black;
+    }
 </style>
 
 @section scripts{
@@ -445,7 +402,6 @@
                                 }
                             })
                         }
-                        @* console.log('This was logged in the callback: ' + result);*@
                     }
                 });
             })
