--- a/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/Home/Index.cshtml
@@ -76,19 +76,45 @@
     </div>
 </div>
 
-<div class="container-fluid">
-    <!--<div class="coding-tips-downside">-->
-    @*<div class="container">
-            <span class="col-md-1 icon-footer"><i class="devicon-android-plain"></i></span>
-        </div>*@
-    <!--</div>-->
+<div class="container-fluid coding-tips-downside-container">
+    <div class="coding-tips-downside" style="height: auto; margin: auto; display: flex; flex-wrap: wrap; align-items: center; justify-content: center; width: 500px;">
+
+        <div class="row row-icons">
+            <div class="col-sm-1"><a href="/Courses?java"><img class="icon-java" src="https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?javascript"><img class="icon-javascript" src="https://img.icons8.com/color/48/000000/javascript--v1.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?python"><img class="icon-python" src="https://img.icons8.com/color/48/000000/python--v1.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?git"><img class="icon-git" src="https://img.icons8.com/color/48/000000/git.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?php"><img class="icon-php" src="https://img.icons8.com/officel/48/000000/php-logo.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?vue-js"><img class="icon-vue-js" src="https://img.icons8.com/color/48/000000/vue-js.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?docker"><img class="icon-docker" src="https://img.icons8.com/color/48/000000/docker.png" /></a></div>
+        </div>
+        <div class="row row-icons">
+            <div class="col-sm-1"><a href="/Courses?flutter"><img class="icon-flutter" src="https://img.icons8.com/color/48/000000/flutter.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?c++"><img class="icon-c-plus-plus" src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?c#"><img class="icon-c-sharp" src="https://img.icons8.com/color/48/000000/c-sharp-logo.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?ruby"><img class="icon-ruby" src="https://img.icons8.com/color/48/000000/ruby-programming-language.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?react"><img class="icon-react" src="https://img.icons8.com/ultraviolet/48/000000/react--v2.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?wordpress"><img class="icon-wordpress" src="https://img.icons8.com/fluency/48/000000/wordpress.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?arduino"><img class="icon-arduino" src="https://img.icons8.com/color/48/000000/arduino.png" /></a></div>
+        </div>
+        <div class="row row-icons-last">
+            <div class="col-sm-1"><a href="/Courses?html"><img class="icon-html" src="https://img.icons8.com/color/48/000000/html-5--v1.png"/></a></div>
+            <div class="col-sm-1"><a href="/Courses?css"><img class="icon-css" src="https://img.icons8.com/color/48/000000/css3.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?node-js"><img class="icon-node-js" src="https://img.icons8.com/color/48/000000/nodejs.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?angular"><img class="icon-angular" src="https://img.icons8.com/color/48/000000/angularjs.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?swift"><img class="icon-swift" src="https://img.icons8.com/color/48/000000/swift.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?type-script"><img class="icon-type-script" src="https://img.icons8.com/color/48/000000/typescript.png" /></a></div>
+            <div class="col-sm-1"><a href="/Courses?sql"><img class="icon-mysql" src="https://img.icons8.com/color/48/000000/mysql-logo.png" /></a></div>
+        </div>
+    </div>
+</div>
+
     <div class="icon-bar text-right icon-bar-social-links">
         <a class="social-links-icons-a icon-instagram" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-instagram" name="logo-instagram"></ion-icon></a>
         <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-youtube" name="logo-youtube"></ion-icon></a>
         <a class="social-links-icons-a" href="https://www.finki.ukim.mk/" target="_blank"><ion-icon class="icon-twitter" name="logo-twitter"></ion-icon></a>
         <a class="social-links-icons-a" href="https://github.com/DimitrievLjupce" target="_blank"><ion-icon class="icon-github" name="logo-github"></ion-icon></a>
     </div>
-</div>
 
 <style>
 
@@ -265,12 +291,6 @@
             border: 2px solid #5ABD64;
         }
 
-        .coding-tips-downside {
-            margin-top: 100px;
-            height: 200px;
-            background-color: #303b51;
-        }
-
 
         @*tuka*@
         .icon-bar-social-links {
@@ -322,10 +342,172 @@
             margin-bottom: 50px;
         }
 
-    .where-effective-learning-happens{
-        color: white;
-    }
+        .where-effective-learning-happens{
+            color: white;
+        }
+
+        .row-icons {
+            padding-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .row-icons-last {
+            padding-bottom: 50px;
+        }
+
+        .coding-tips-downside-container {
+            background-color: #303b51;
+        }
+
+        .coding-tips-downside div {
+            display: inline-flex;
+            width: 700px;
+            cursor: pointer;
+        }
+
+        .coding-tips-downside {
+            margin-top: 100px;
+        }
+        
 
 </style>
+
+@section scripts{
+    <script>
+        $(".icon-java").on("mouseover", function () {
+            $(".icon-java").attr("src", 'https://img.icons8.com/ios/48/000000/java-coffee-cup-logo--v1.png')
+        }).on("mouseout", function () {
+            $(".icon-java").attr("src", 'https://img.icons8.com/color/48/000000/java-coffee-cup-logo--v1.png')
+        })
+
+        $(".icon-javascript").on("mouseover", function () {
+            $(".icon-javascript").attr("src", 'https://img.icons8.com/ios-filled/48/000000/javascript.png')
+        }).on("mouseout", function () {
+            $(".icon-javascript").attr("src", 'https://img.icons8.com/color/48/000000/javascript--v1.png')
+        })
+
+
+        $(".icon-c-plus-plus").on("mouseover", function () {
+            $(".icon-c-plus-plus").attr("src", 'https://img.icons8.com/ios-filled/48/000000/c-plus-plus-logo.png')
+        }).on("mouseout", function () {
+            $(".icon-c-plus-plus").attr("src", 'https://img.icons8.com/color/48/000000/c-plus-plus-logo.png')
+        })
+
+        $(".icon-python").on("mouseover", function () {
+            $(".icon-python").attr("src", 'https://img.icons8.com/ios-filled/48/000000/python.png')
+        }).on("mouseout", function () {
+            $(".icon-python").attr("src", 'https://img.icons8.com/color/48/000000/python--v1.png')
+        })
+
+        $(".icon-flutter").on("mouseover", function () {
+            $(".icon-flutter").attr("src", 'https://img.icons8.com/ios-filled/48/000000/flutter.png')
+        }).on("mouseout", function () {
+            $(".icon-flutter").attr("src", 'https://img.icons8.com/color/48/000000/flutter.png')
+        })
+
+        $(".icon-git").on("mouseover", function () {
+            $(".icon-git").attr("src", 'https://img.icons8.com/ios-filled/48/000000/git.png')
+        }).on("mouseout", function () {
+            $(".icon-git").attr("src", 'https://img.icons8.com/color/48/000000/git.png')
+        })
+
+
+        $(".icon-c-sharp").on("mouseover", function () {
+            $(".icon-c-sharp").attr("src", 'https://img.icons8.com/ios-filled/48/000000/c-sharp-logo.png')
+        }).on("mouseout", function () {
+            $(".icon-c-sharp").attr("src", 'https://img.icons8.com/color/48/000000/c-sharp-logo.png')
+        })
+
+
+        $(".icon-ruby").on("mouseover", function () {
+            $(".icon-ruby").attr("src", 'https://img.icons8.com/ios-filled/48/000000/ruby-programming-language.png')
+        }).on("mouseout", function () {
+            $(".icon-ruby").attr("src", 'https://img.icons8.com/color/48/000000/ruby-programming-language.png')
+        })
+
+        $(".icon-html").on("mouseover", function () {
+            $(".icon-html").attr("src", 'https://img.icons8.com/ios-filled/48/000000/html-5--v1.png')
+        }).on("mouseout", function () {
+            $(".icon-html").attr("src", 'https://img.icons8.com/color/48/000000/html-5--v1.png')
+        })
+
+        $(".icon-css").on("mouseover", function () {
+            $(".icon-css").attr("src", 'https://img.icons8.com/ios-filled/48/000000/css3.png')
+        }).on("mouseout", function () {
+            $(".icon-css").attr("src", 'https://img.icons8.com/color/48/000000/css3.png')
+        })
+
+        $(".icon-node-js").on("mouseover", function () {
+            $(".icon-node-js").attr("src", 'https://img.icons8.com/windows/48/000000/nodejs.png')
+        }).on("mouseout", function () {
+            $(".icon-node-js").attr("src", 'https://img.icons8.com/color/48/000000/nodejs.png')
+        })
+
+        $(".icon-angular").on("mouseover", function () {
+            $(".icon-angular").attr("src", 'https://img.icons8.com/ios-filled/48/000000/angularjs.png')
+        }).on("mouseout", function () {
+            $(".icon-angular").attr("src", 'https://img.icons8.com/color/48/000000/angularjs.png')
+        })
+
+        $(".icon-php").on("mouseover", function () {
+            $(".icon-php").attr("src", 'https://img.icons8.com/ios-filled/48/000000/php-logo.png')
+        }).on("mouseout", function () {
+            $(".icon-php").attr("src", 'https://img.icons8.com/officel/48/000000/php-logo.png')
+        })
+
+        $(".icon-react").on("mouseover", function () {
+            $(".icon-react").attr("src", 'https://img.icons8.com/ios/48/000000/react-native--v2.png"')
+        }).on("mouseout", function () {
+            $(".icon-react").attr("src", 'https://img.icons8.com/ultraviolet/48/000000/react--v2.png')
+        })
+
+
+        $(".icon-swift").on("mouseover", function () {
+            $(".icon-swift").attr("src", 'https://img.icons8.com/ios-glyphs/48/000000/swift.png')
+        }).on("mouseout", function () {
+            $(".icon-swift").attr("src", 'https://img.icons8.com/color/48/000000/swift.png')
+        })
+
+
+        $(".icon-vue-js").on("mouseover", function () {
+            $(".icon-vue-js").attr("src", 'https://img.icons8.com/windows/48/000000/vuejs.png')
+        }).on("mouseout", function () {
+            $(".icon-vue-js").attr("src", 'https://img.icons8.com/color/48/000000/vue-js.png')
+        })
+
+        $(".icon-wordpress").on("mouseover", function () {
+            $(".icon-wordpress").attr("src", 'https://img.icons8.com/material-outlined/48/000000/wordpress--v1.png')
+        }).on("mouseout", function () {
+            $(".icon-wordpress").attr("src", ' https://img.icons8.com/fluency/48/000000/wordpress.png')
+        })
+
+        $(".icon-type-script").on("mouseover", function () {
+            $(".icon-type-script").attr("src", 'https://img.icons8.com/ios-filled/48/000000/typescript.png')
+        }).on("mouseout", function () {
+            $(".icon-type-script").attr("src", 'https://img.icons8.com/color/48/000000/typescript.png')
+        })
+
+        $(".icon-docker").on("mouseover", function () {
+            $(".icon-docker").attr("src", 'https://img.icons8.com/ios-filled/48/000000/docker.png')
+        }).on("mouseout", function () {
+            $(".icon-docker").attr("src", 'https://img.icons8.com/color/48/000000/docker.png')
+        })
+
+        $(".icon-arduino").on("mouseover", function () {
+            $(".icon-arduino").attr("src", 'https://img.icons8.com/ios-filled/48/000000/arduino.png')
+        }).on("mouseout", function () {
+            $(".icon-arduino").attr("src", 'https://img.icons8.com/color/48/000000/arduino.png')
+        })
+
+
+        $(".icon-mysql").on("mouseover", function () {
+            $(".icon-mysql").attr("src", 'https://img.icons8.com/ios-filled/48/000000/mysql-logo.png')
+        }).on("mouseout", function () {
+            $(".icon-mysql").attr("src", 'https://img.icons8.com/color/48/000000/mysql-logo.png')
+        })
+
+        
+    </script>
+}
 
 
