--- a/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
+++ b/BoxOfCourses/BoxOfCourses/Views/ReviewModels/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container cont-reviews-table" style="color: white; ">
 
-    <p style="color:white; font-size: 35px">
+    <p style="color:white; font-size: 40px; font-weight: 700" class="heading-index-reviews">
         Want to <span style="color: #5ABD64">share your opinion</span> with us? <a href="~/ReviewModels/Create"><ion-icon style="color: orange; font-size: 30px; padding-top: 9px" name="duplicate"></ion-icon></a>
     </p>
     <div class="table-reviews-container">
@@ -83,7 +83,6 @@
         color: lightblue;
         font-size: 15px;
     }
-
 </style>
 
 @section scripts{
